2000-10-28  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Headers/gnustep/base/NSBundle.h: added ivar.
	* Source/NSBundle.m ([NSBundle +_addFrameworkFromClass:]): new private
	method to parse NSFramework_* classes.
	(_bundle_load_callback): added framework support. Wrap classes in a
	NSValue to avoid implicit initialization.
	([NSBundle +allBundles]): added framework support.
	([NSBundle +allFrameworks]): implemented.
	([NSBundle +bundleForClass:]): get classes from NSValue object.
	([NSBundle -classNamed:]): likewise.

	* Headers/gnustep/base/objc-load.h (LINKER_GETSYMBOL): new define.
	* Source/objc-load.m (objc_get_symbol_path): get lib path of a Class
	or Category.
	* Source/simple-load.h (__objc_dynamic_get_symbol_path): indentifies
	lib path of a symbol.
	* Source/dld-load.h (__objc_dynamic_get_symbol_path): not supported.
	* Source/hpux-load.h (__objc_dynamic_get_symbol_path): not implemented.

	* Source/mframe/mframe.foot (mframe_get_arg): typ declaration fix.
	(mframe_set_arg): idem

	* Headers/gnustep/base/config.h.in: added HAVE_DLADDR
	* aclocal.m4 (OBJC_SYS_DYNAMIC_LINKER): test for dladdr()
	* configure.in: added --with-libxml-include and --with-libxml-library,
	added -I/usr/local/include and -L/usr/local/lib for FreeBSD.

2000-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Reverted last change -
        +new has to do alloc, init or break classes that expect to use their
	own allocation mechanisms.  Similarly, +alloc must call the
	([+allocWithZone:]) method.  We can't make optimisations that
	break with the OpenStep spec and MacOS documentation - they would
	break production code.  Of course, private classes can do this.

2000-10-27  Lyndon Tremblay  <humasect@home.com>

	* Source/NSObject.m ([NSObject +new]): No longer sends 2 messages,
	uses NSAllocateObject().
	([NSObject +alloc]): Likewise, no message sending within the method.

2000-10-27  Richard Frith-Macdonald <rfm@gnu.org>
